# pinocchio-example

./: .gitignore  Cargo.toml  README.md
pinocchio-vault/: Cargo.toml  vault.json
pinocchio-vault/src/: instruction.rs  lib.rs  system_utils.rs  utils.rs
storage/: Cargo.toml
storage/client/: package-lock.json  package.json  tsconfig.json
storage/client/src/: test.ts
storage/src/: instructions.rs  lib.rs  util.rs
vault-test/: Cargo.toml  README.md
vault-test/src/: main.rs
