[package]
name = "pinocchio-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib","cdylib"]

[dependencies]
five8 = "1.0.0"
pinocchio = { version="0.10.1", features = ["cpi","alloc"] }
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.5.0"
shank = "0.4.6"
solana-address = { version = "2.0.0", features = ["std", "curve25519"] }
